--- a/app/src/main/res/layout/fragment_user_detail.xml
+++ b/app/src/main/res/layout/fragment_user_detail.xml
@@ -30,7 +30,23 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:visibility="invisible" />
 
+
+    <TextView
+        android:id="@+id/tvFavoriteDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:text="@string/favorite_date"
+        app:layout_constraintTop_toTopOf="@id/ivFavorite"
+        app:layout_constraintBottom_toBottomOf="@id/ivFavorite"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="16dp"
+        android:textSize="12sp"
+        android:textStyle="italic"
+        android:textColor="@color/gray"/>
+
+
     <ImageView
+        android:id="@+id/ivFavorite"
         android:layout_width="48dp"
         android:layout_height="48dp"
         android:layout_marginTop="16dp"
