--- a/app/src/main/res/layout/fragment_user_search.xml
+++ b/app/src/main/res/layout/fragment_user_search.xml
@@ -30,5 +30,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginHorizontal="24dp" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabFavorite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        app:srcCompat="@drawable/baseline_favorite_border_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="24dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
