--- a/app/src/main/res/navigation/github_user_search_nav_graph.xml
+++ b/app/src/main/res/navigation/github_user_search_nav_graph.xml
@@ -52,6 +52,9 @@
         android:name="com.example.githubusersearcher.presentation.favorites.FavoritesFragment"
         android:label="FavoritesFragment"
         tools:layout="@layout/fragment_favorites">
+        <action
+            android:id="@+id/action_favoritesFragment_to_userDetailFragment"
+            app:destination="@id/userDetailFragment" />
     </fragment>
 
 
